@@ -16,6 +16,7 @@ Added
     Let user choose shell when opening container console session (#116)
     Right click context menu for containers (#118)
     A server overview page (#121)
+    Bulk delete containers (ground works there for more actions) on server
 
 0.4.0
 
